tests/snapshots/integration__integration_tests__merge__readme_example_hooks_post_create.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature-x
    - "--force"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mRunning post-create [1minstall[0m:[0m
[107m [0m  [2m[0m[2m[34muv[0m[2m sync[0m
[0m
  Resolved 24 packages in 145ms
  Installed 24 packages in 1.2s
✅ [32mCreated new worktree for [1m[32mfeature-x[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].feature-x[0m[0m
💡 [2mRun `wt config shell install` to enable automatic cd[0m
🔄 [36mRunning post-start [1mdev[0m:[0m
[107m [0m  [2m[0m[2m[34muv[0m[2m run dev[0m
